# neural-network

./: .gitignore  CMakeLists.txt  README.md  activations.hpp  data_loader.hpp  import_datasets.py  losses.hpp  matrix.cpp  matrix.hpp  neural_network.cpp  nn.cpp
